/*
 * $Id: ChangeLog,v 1.3053 2004/06/09 15:51:02 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-09 18:40 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.c
    * some small modification in ACSC mapping

2004-06-09 17:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.h
  * xharbour/source/rtl/gtsln/gtsln.c
    ! fixed bug in color mapping
    * translate all box characters for xterm into single ones.
    * modified method of UTF-8 patched slang detection

2004-06-09 16:23 UTC-0300 Giancarlo Niccolai <antispam /at/ niccolai "dot" ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    ! When changing the fg window with ALT-TAB, the ALT status of gtxvt was
      left on. When returning to the application window, many keys were
      unuseable until the user pressed ALT.
      Fixed.

2004-06-09 16:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/tbrwtext.prg
    ! Inhibit word-wrapping in debugger with the current version of TEditor by
      passing negative nLineLength to the TEditor constructor.

2004-06-09 12:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rdd/dbcmd.c
    * Fixed the export of numeric fields in __dbSql.

2004-06-08 23:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/macro/macro.slx
    + Added Error Generation in *ElementToken() if Token is not Identifier and not valid numeric.

  * source/vm/macro.c
    ! Fixed GPF trap in hb_macroSyntaxError() related to pMacro being used after being released.
    ! Fixed memory leak in hb_macroSyntaxError() when the error system forces a QUIT.

2004-06-09 13:25 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * include/inkey.ch
    These inkey codes: